SWD-32 Complete override function of all Controller
